fix(styles): adjust input widths for better alignment in password send email form

--- a/src/app/login/password-send-email/password-reset/password-reset.component.scss
+++ b/src/app/login/password-send-email/password-reset/password-reset.component.scss
@@ -244,7 +244,8 @@ mat-dialog-content {
       margin: 12px 0;
 
       input {
-        padding-left: 40px;
+        width: calc(100% - 52px) !important;
+        padding-left: 50px;
         font-size: 14px;
       }
     }
@@ -273,6 +274,7 @@ mat-dialog-content {
     }
 
     .form input {
+      width: calc(100% - 42px) !important;
       height: 28px;
       padding-left: 40px;
     }
