--- a/src/app/login/password-send-email/password-send-email.component.scss
+++ b/src/app/login/password-send-email/password-send-email.component.scss
@@ -224,6 +224,7 @@
         margin: 12px 0;
         
         input {
+          width: calc(100% - 52px) !important;
           padding-left: 50px;
           font-size: 14px;
         }
@@ -261,6 +262,7 @@
       }
       
       .form input {
+        width: calc(100% - 42px) !important;
         height: 28px;
         padding-left: 40px;
       }
